--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   },
   "dependencies": {
     "axios": "^1.7.2",
+    "echarts": "^5.5.1",
     "element-plus": "^2.7.8",
     "pinia": "^2.1.7",
+    "swiper": "^11.1.9",
     "vue": "^3.4.29",
     "vue-router": "^4.3.3"
   },
