--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "pinia": "^2.1.7",
     "swiper": "^11.1.9",
     "vue": "^3.4.29",
-    "vue-router": "^4.3.3"
+    "vue-router": "^4.3.3",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@tsconfig/node20": "^20.1.4",
